--- a/wally.toml
+++ b/wally.toml
@@ -7,3 +7,4 @@ realm = "shared"
 [dependencies]
 Trove = "sleitnick/trove@1.5.0"
 BufferUtil = "sleitnick/buffer-util@0.3.1"
+Tree = "sleitnick/tree@1.1.0"
